--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@react-navigation/native": "^6.0.11",
     "@react-navigation/stack": "^6.2.2",
     "firebase": "8.2.3",
+    "jetifier": "^2.0.0",
     "lottie-react-native": "^5.1.4",
     "react": "18.0.0",
     "react-native": "0.69.4",
